# generate_the_diff

./: .gitignore  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml  pyci.yml
engine/: cli.py  formatter_diff.py  gendiff.py  generate_diff.py  parse_files.py  parser.py  tools.py
engine/formatters/: json.py  plain.py  stylish.py
engine/scripts/: gendiff.py
files/: output.txt
files/json/: diff_test.json
files/yaml/: first_file.yaml  second_file.yaml
gendiff/: __init__.py  cli.py  data_formatting.py  dict_diff.py  diff_tree.py  diff_tree_tools.py  file_parser.py  formatter_diff.py  gen_diff.py  gendiff.py  gendiff_engine.py  gendiff_old.py  gendiff_with_formatter.py  parse_files.py  parser.py  stylish.py  tools.py
gendiff/formatters/: json.py  old_stylish.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gen_diff.py  gendiff.py
gendiff/tools/: parser.py  tools.py
tests/: conftest.py  fixtures.py  test_formatter_diff.py  test_gendiff.py  test_tools.py
tests/fixtures/: diff.txt
tests/fixtures/output/: json_formatted_diff.txt  plain_empty_file_vs_arf_file2.txt  result_test_output.txt  stylish_empty_file_vs_arf_file2.txt  unformatted_diff.txt
