[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = ""
authors = [
	"Paul Nikolaevskiy <paulnikolaevsky@gmail.com>"
]
packages = [
	{ include = "gendiff" },
]
repository = "https://github.com/Utrian/python-project-50"

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python :: 3.8",
	"Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
ipykernel = "^6.16.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.start_generate_diff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
